Ajustes OpenAPI - Execução de sincronização via API; - Possibilidade de visualização paginada dos dados sincronizados;
