# app/app/Http/Controllers/SincronizacaoController.php
@@ -2,6 +2,9 @@
 
 namespace App\Http\Controllers;
 
+use Illuminate\Routing\Controller;
+use OpenApi\Attributes as OA;
+
 use App\Services\ProdutoPrecoSyncService;
 
 class SincronizacaoController extends Controller
@@ -10,6 +13,14 @@ class SincronizacaoController extends Controller
         private ProdutoPrecoSyncService $service
     ) {}
 
+
+    #[OA\Post(
+        path: "/api/sincronizar/produtos",
+        summary: "Executa o processo de transformação e sincronização dos dados de `produtos_base` para `produto_insercao`.",
+        responses: [
+            new OA\Response(response: 200, description: "Success")
+        ]
+    )]
     public function produtos()
     {
         $this->service->syncProdutos();
@@ -19,6 +30,13 @@ class SincronizacaoController extends Controller
         ]);
     }
 
+    #[OA\Post(
+        path: "/api/sincronizar/precos",
+        summary: "Executa o processo de transformação e sincronização dos dados de `precos_base` para `preco_insercao`.",
+        responses: [
+            new OA\Response(response: 200, description: "Success")
+        ]
+    )]
     public function precos()
     {
         $this->service->syncPrecos();
